welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: not found: value surBiscuit
	while (!surBiscuit()){
                ^