welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit = 0
while (nbBiscuit<3){
	while (!surBiscuit()){
		avance()
	}
	nbBiscuit = nbBiscuit+1
}
